add fonts and vars

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,9 @@
 @import 'reset';
 @import 'global';
+@import 'fonts';
+@import 'vars';
+
+
+@import "./blocks/service";
+@import "./blocks/contacts";
+@import './blocks/footer';
