--- a/scss/blocks/_contacts.scss
+++ b/scss/blocks/_contacts.scss
@@ -8,7 +8,7 @@
         display: flex;
         flex-direction: column;
         max-height: 155px;
-        background-color: $bg-grey;
+        background-color: $bg-color-light;
 
         &_left {
             max-width: 397px;
@@ -29,7 +29,7 @@
 
         &__text_grey {
             font-size: 14px;
-            color: $text-light-grey;
+            color: $ext-color-dark;
         }
     }
 
