--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -16,191 +16,14 @@
     }
 }
 
-.form {
-    background-color: #265fe5;
-    border-radius: 50px 50px 0px 0px;
-    color: #fff;
-    padding-top: 85px;
-    padding-bottom: 400px;
-
-    @media screen and (max-width: 700px) {
-        padding-bottom: 670px;
-    }
-
-    @media screen and (max-width: 390px) {
-        padding-top: 30px;
-    }
-}
-
-.form__inner {
-    display: flex;
-    justify-content: space-between;
-    gap: 200px;
-
-    @media screen and (max-width: 1031px) {
-        gap: 100px;
-    }
-
-    @media screen and (max-width: 940px) {
-        gap: 50px;
-    }
-
-    @media screen and (max-width: 910px) {
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 50px;
-        text-align: center;
-    }
-
-    @media screen and (max-width: 910px) {
-        margin-bottom: 20px;
-    }
-}
-
-.form__text {
-    width: 420px;
-    padding-right: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 15px;
-
-    @media screen and (max-width: 750px) {
-        text-align: center;
-    }
-
-    @media screen and (max-width: 445px) {
-        max-width: 340px;
-    }
-}
-
-.form__title {
-    font-family: "RF Dewi Extended";
-    font-weight: 700;
-    font-size: 45px;
-    line-height: 58px;
-    margin: 0;
-
-    @media screen and (max-width: 750px) {
-        font-size: 35px;
-    }
-
-    @media screen and (max-width: 390px) {
-        font-size: 25px;
-        line-height: 30px;
-    }
-}
-
-.form__subtitle {
-    width: 400px;
-
-    @media screen and (max-width: 390px) {
-        font-size: 16px;
-        line-height: 22px;
-    }
-}
-
-.form__main {
-    flex: 1;
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    grid-gap: 10px;
-
-    @media screen and (max-width: 420px) {
-        margin-top: -30px;
-    }
-}
-
-.form__main-input,
-.form__main-input-text {
-    border-radius: 6px;
-    border-color: transparent;
-    color: inherit;
-    font-size: 16px;
-    font-weight: 400;
-    background-color: inherit;
-    border: 1px solid #9BB6F3;
-
-}
-
-.form__main-input::placeholder,
-.form__main-input-text::placeholder {
-    color: #9BB6F3;
-    font-size: inherit;
-}
-
-.form__row {
-    display: flex;
-    gap: 10px;
-    justify-content: space-between;
-
-    @media screen and (max-width: 420px) {
-        flex-direction: column;
-    }
-}
-
-.form__main-input {
-    flex: 1;
-    padding: 5px 0 5px 18px;
-}
-
-.error .form__main-input {
-    border-color: red;
-}
-
-.form__main-input-text {
-    height: 115px;
-    padding: 5px 0 35px 18px;
-}
-
-.btn-row {
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-
-    @media screen and (max-width: 910px) {
-        align-items: center;
-    }
-}
-
-.form__main-button {
-    position: relative;
-    width: 239px;
-    margin-top: 30px;
-    padding: 10px 35px 10px 10px;
-    border-radius: 8px;
-    border-color: transparent;
-    background-color: #fff;
-    color: #265FE5;
-    font-size: 22px;
-    font-weight: 600;
-    cursor: pointer;
-
-    @media screen and (max-width: 390px) {
-        width: 211px;
-        margin: 15px 50px;
-    }
-}
-
-.form__main-button::after {
-    position: absolute;
-    content: '';
-    background-image: url(../images/arrow-blue.svg);
-    width: 26px;
-    height: 14px;
-    right: 25px;
-    bottom: 15px;
-}
-
 .footer {
     position: absolute;
-    color: #fff;
+    color: $text-color-main;
     height: 300px;
     width: 100%;
     bottom: 0;
     z-index: 4;
-    background-color: #3a475e;
-    border-radius: 50px 50px 0px 0px;
+    background-color: $bg-color-white;
 
     @media screen and (max-width: 1080px) {
         height: 400px;
