--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 @import 'vars';
 
 
-@import "./blocks/service";
-@import "./blocks/contacts";
+@import './blocks/service';
+@import './blocks/feedback-form';
+@import './blocks/contacts';
 @import './blocks/footer';
