--- a/scss/style.css
+++ b/scss/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&family=Roboto:ital,wght@0,300;0,400;1,300&family=Rubik&display=swap");
 html {
   box-sizing: border-box;
 }
@@ -75,4 +76,562 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
+}
+
+.service {
+  position: relative;
+  max-width: 1920px;
+  margin: 0 auto;
+  font-family: "Rubik", sans-serif;
+}
+.service_bg-grey {
+  max-height: 537px;
+  min-height: 537px;
+  background-color: #EEF3FD;
+}
+.service_bg-grey__image {
+  max-height: 423px;
+  margin-top: 57px;
+  margin-right: 306px;
+  margin-bottom: 57px;
+  margin-left: 1035px;
+}
+.service_bg-red {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-height: 670px;
+  min-height: 670px;
+  background-color: #D71635;
+}
+.service_bg-white {
+  position: absolute;
+  top: 0;
+  left: 245px;
+  z-index: 1;
+  max-height: 662px;
+  min-height: 662px;
+  max-width: 706px;
+  background-color: #FFFFFF;
+}
+
+.block-header__icon, .block-header__title {
+  display: inline-block;
+}
+.block-header__title {
+  color: #D71635;
+}
+
+.service-content {
+  font-size: 18px;
+}
+.service-content__item {
+  padding-bottom: 15px;
+  color: #000000;
+}
+.service-content__item_bold {
+  font-weight: 700;
+}
+.service-content__item_red {
+  font-weight: 700;
+  color: #D71635;
+}
+
+.service-list_bg-red {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  max-width: 502px;
+  max-height: 244px;
+  margin-top: 213px;
+  margin-left: 300px;
+}
+.service-list__icon {
+  margin: auto;
+}
+.service-list__item_bg-red {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 2em;
+  font-size: 18px;
+  color: #FFFFFF;
+  list-style-type: none;
+}
+
+.block-btn {
+  max-width: 200px;
+  min-width: 200px;
+  max-height: 51px;
+  min-height: 51px;
+  padding-left: 23px;
+  border: 0;
+  border-radius: 4px;
+  text-transform: uppercase;
+  text-align: left;
+  font-size: 18px;
+}
+.block-btn_red {
+  background-color: #D71635;
+  color: #FFFFFF;
+}
+.block-btn_white {
+  background-color: #FFFFFF;
+  color: #D71635;
+}
+.block-btn_white::after {
+  position: absolute;
+  content: "";
+  background-image: url(../../images/arrows/white_arrow.svg);
+  width: 26px;
+  height: 14px;
+  right: 25px;
+  bottom: 15px;
+}
+
+.service-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 2fr 1fr;
+  max-width: 615px;
+  max-height: 360px;
+  margin-top: 213px;
+  margin-left: 120px;
+}
+.service-form__input {
+  background-color: #D71635;
+  border: none;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  border: solid 2px rgba(255, 255, 255, 0.48);
+  border-radius: 4px;
+  color: #FFFFFF;
+}
+.input-container_sm {
+  max-width: 298px;
+  max-height: 66px;
+  min-width: 298px;
+  min-height: 66px;
+}
+.input-container_lg {
+  max-width: 613px;
+  max-height: 128px;
+  min-width: 613px;
+  min-height: 128px;
+  grid-column: 1/3;
+}
+.input-container_sm, .input-container_lg {
+  margin-top: 6px;
+  margin-bottom: 6px;
+}
+
+.form {
+  background-color: #D71635;
+  color: #FFFFFF;
+  padding-top: 85px;
+  padding-bottom: 400px;
+}
+@media screen and (max-width: 700px) {
+  .form {
+    padding-bottom: 670px;
+  }
+}
+@media screen and (max-width: 390px) {
+  .form {
+    padding-top: 30px;
+  }
+}
+
+.form__inner {
+  display: flex;
+  justify-content: space-between;
+  gap: 200px;
+}
+@media screen and (max-width: 1031px) {
+  .form__inner {
+    gap: 100px;
+  }
+}
+@media screen and (max-width: 940px) {
+  .form__inner {
+    gap: 50px;
+  }
+}
+@media screen and (max-width: 910px) {
+  .form__inner {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 50px;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 910px) {
+  .form__inner {
+    margin-bottom: 20px;
+  }
+}
+
+.form__text {
+  width: 420px;
+  padding-right: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 15px;
+}
+@media screen and (max-width: 750px) {
+  .form__text {
+    text-align: center;
+  }
+}
+@media screen and (max-width: 445px) {
+  .form__text {
+    max-width: 340px;
+  }
+}
+
+.form__title {
+  font-family: "RF Dewi Extended";
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 58px;
+  margin: 0;
+}
+@media screen and (max-width: 750px) {
+  .form__title {
+    font-size: 35px;
+  }
+}
+@media screen and (max-width: 390px) {
+  .form__title {
+    font-size: 25px;
+    line-height: 30px;
+  }
+}
+
+.form__subtitle {
+  width: 400px;
+}
+@media screen and (max-width: 390px) {
+  .form__subtitle {
+    font-size: 16px;
+    line-height: 22px;
+  }
+}
+
+.form__main {
+  flex: 1;
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 10px;
+}
+@media screen and (max-width: 420px) {
+  .form__main {
+    margin-top: -30px;
+  }
+}
+
+.form__main-input,
+.form__main-input-text {
+  border-radius: 6px;
+  border-color: transparent;
+  color: inherit;
+  font-size: 16px;
+  font-weight: 400;
+  background-color: inherit;
+  border: 1px solid #9BB6F3;
+}
+
+.form__main-input::-moz-placeholder, .form__main-input-text::-moz-placeholder {
+  color: #9BB6F3;
+  font-size: inherit;
+}
+
+.form__main-input::placeholder,
+.form__main-input-text::placeholder {
+  color: #9BB6F3;
+  font-size: inherit;
+}
+
+.form__row {
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+}
+@media screen and (max-width: 420px) {
+  .form__row {
+    flex-direction: column;
+  }
+}
+
+.form__main-input {
+  flex: 1;
+  padding: 5px 0 5px 18px;
+}
+
+.error .form__main-input {
+  border-color: #D71635;
+}
+
+.form__main-input-text {
+  height: 115px;
+  padding: 5px 0 35px 18px;
+}
+
+.btn-row {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+@media screen and (max-width: 910px) {
+  .btn-row {
+    align-items: center;
+  }
+}
+
+.form__main-button {
+  position: relative;
+  width: 239px;
+  margin-top: 30px;
+  padding: 10px 35px 10px 10px;
+  border-radius: 8px;
+  border-color: transparent;
+  background-color: #FFFFFF;
+  color: #D71635;
+  font-size: 22px;
+  font-weight: 600;
+  cursor: pointer;
+}
+@media screen and (max-width: 390px) {
+  .form__main-button {
+    width: 211px;
+    margin: 15px 50px;
+  }
+}
+
+.form__main-button::after {
+  position: absolute;
+  content: "";
+  background-image: url(../../images/arrows/red_arrow.svg);
+  width: 26px;
+  height: 14px;
+  right: 25px;
+  bottom: 15px;
+}
+
+.block-contacts {
+  max-width: 1920px;
+  max-height: 387px;
+  margin: 0 auto;
+  font-family: "Rubik", sans-serif;
+}
+.block-contacts-content {
+  display: flex;
+  flex-direction: column;
+  max-height: 155px;
+  background-color: #EEF3FD;
+}
+.block-contacts-content_left {
+  max-width: 397px;
+}
+.block-contacts-content_right {
+  max-width: 285px;
+}
+.block-contacts-content__icon {
+  max-height: 44px;
+}
+.block-contacts-content__text_bold {
+  font-size: 20px;
+  font-weight: 600;
+}
+.block-contacts-content__text_grey {
+  font-size: 14px;
+  color: #525252;
+}
+.block-contacts-map {
+  max-width: 900px;
+  max-height: 387px;
+}
+
+.container__low {
+  max-width: 1250px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+@media screen and (max-width: 1310px) {
+  .container__low {
+    max-width: 1000px;
+  }
+}
+@media screen and (max-width: 1080px) {
+  .container__low {
+    max-width: 700px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .container__low {
+    max-width: 500px;
+  }
+}
+
+.footer {
+  position: absolute;
+  color: #000000;
+  height: 300px;
+  width: 100%;
+  bottom: 0;
+  z-index: 4;
+  background-color: #FFFFFF;
+}
+@media screen and (max-width: 1080px) {
+  .footer {
+    height: 400px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .footer {
+    text-align: center;
+    height: 660px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+  }
+}
+
+.footer__inner {
+  display: flex;
+  justify-content: space-between;
+  gap: 65px;
+  margin-top: 75px;
+}
+@media screen and (max-width: 910px) {
+  .footer__inner {
+    margin-top: 30px;
+    height: 315px;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: end;
+  }
+}
+@media screen and (max-width: 700px) {
+  .footer__inner {
+    flex-wrap: nowrap;
+    align-items: center;
+    margin-bottom: 15px;
+  }
+}
+
+.footer__logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+@media screen and (max-width: 910px) {
+  .footer__logo {
+    width: 232px;
+    align-items: center;
+  }
+}
+
+.footer__copy {
+  display: none;
+}
+@media screen and (max-width: 910px) {
+  .footer__copy {
+    display: inline-block;
+  }
+}
+
+.footer__menu {
+  width: 460px;
+}
+@media screen and (max-width: 1080px) {
+  .footer__menu {
+    width: auto;
+  }
+}
+
+.footer__menu-list {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 100px;
+  margin: 0;
+  padding: 0;
+}
+@media screen and (max-width: 1080px) {
+  .footer__menu-list {
+    height: auto;
+    flex-wrap: nowrap;
+  }
+}
+@media screen and (max-width: 700px) {
+  .footer__menu-list {
+    gap: 5px;
+  }
+}
+
+.footer__menu-item {
+  padding-right: 50px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  letter-spacing: 1.5;
+}
+@media screen and (max-width: 700px) {
+  .footer__menu-item {
+    padding-right: 0;
+  }
+}
+
+.footer__contacts {
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+@media screen and (max-width: 910px) {
+  .footer__contacts {
+    justify-content: flex-end;
+  }
+}
+@media screen and (max-width: 700px) {
+  .footer__contacts {
+    justify-content: center;
+    align-items: center;
+    margin-top: -30px;
+  }
+}
+
+.footer__row {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.footer__contacts p {
+  display: block;
+  margin: 0;
+}
+
+.footer__logo p {
+  display: block;
+  margin: 0;
+}
+@media screen and (max-width: 910px) {
+  .footer__logo p {
+    display: none;
+  }
+}
+
+.footer__phone {
+  font-family: "RF Dewi Extended";
+}
+
+.footer__adress {
+  padding-bottom: 5px;
+}
+
+.footer__email {
+  width: 100px;
 }/*# sourceMappingURL=style.css.map */
