--- a/scss/style.css
+++ b/scss/style.css
@@ -114,29 +114,39 @@ body {
   background-color: #FFFFFF;
 }
 
-.block-header__icon, .block-header__title {
+.header-container__icon, .header-container__title {
   display: inline-block;
+  margin-top: 62px;
 }
-.block-header__title {
+.header-container__title {
+  margin-left: 29px;
+  font-size: 40px;
+  font-weight: 600;
   color: #D71635;
 }
 
-.service-content {
+.content-container {
+  max-width: 610px;
+  margin: 46px 44px 40px 52px;
   font-size: 18px;
+  line-height: 24px;
 }
-.service-content__item {
-  padding-bottom: 15px;
+.content-container__item {
+  margin-bottom: 15px;
   color: #000000;
 }
-.service-content__item_bold {
+.content-container__item_bold {
   font-weight: 700;
 }
-.service-content__item_red {
+.content-container__item_red {
   font-weight: 700;
   color: #D71635;
 }
 
-.service-list_bg-red {
+.block-list__title, .block-list_bg-white {
+  margin-bottom: 15px;
+}
+.block-list_bg-red {
   display: grid;
   grid-template-columns: 1fr 5fr;
   max-width: 502px;
@@ -144,10 +154,10 @@ body {
   margin-top: 213px;
   margin-left: 300px;
 }
-.service-list__icon {
+.block-list__icon {
   margin: auto;
 }
-.service-list__item_bg-red {
+.block-list__item_bg-red {
   margin-top: 10px;
   margin-bottom: 10px;
   margin-left: 2em;
@@ -167,6 +177,7 @@ body {
   text-transform: uppercase;
   text-align: left;
   font-size: 18px;
+  font-weight: 400;
 }
 .block-btn_red {
   background-color: #D71635;
@@ -176,14 +187,9 @@ body {
   background-color: #FFFFFF;
   color: #D71635;
 }
-.block-btn_white::after {
-  position: absolute;
-  content: "";
-  background-image: url(../../images/arrows/white_arrow.svg);
-  width: 26px;
-  height: 14px;
-  right: 25px;
-  bottom: 15px;
+.block-btn__arrow_white {
+  display: inline-block;
+  margin-left: 11px;
 }
 
 .service-form {
