--- a/scss/style.css
+++ b/scss/style.css
@@ -83,6 +83,7 @@ body {
   max-width: 1920px;
   margin: 0 auto;
   font-family: "Rubik", sans-serif;
+  font-weight: 400;
 }
 .service_bg-grey {
   max-height: 537px;
@@ -143,30 +144,50 @@ body {
   color: #D71635;
 }
 
-.block-list__title, .block-list_bg-white {
+.block-list {
   margin-bottom: 15px;
 }
-.block-list_bg-red {
-  display: grid;
-  grid-template-columns: 1fr 5fr;
+.block-list__title {
+  margin-bottom: 15px;
+}
+
+.content-container_left {
   max-width: 502px;
-  max-height: 244px;
   margin-top: 213px;
   margin-left: 300px;
 }
-.block-list__icon {
-  margin: auto;
-}
-.block-list__item_bg-red {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 2em;
-  font-size: 18px;
+.content-container_left__item {
+  position: relative;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  font-size: 20px;
+  line-height: 27px;
   color: #FFFFFF;
-  list-style-type: none;
+}
+.content-container_left__item::before {
+  position: absolute;
+  content: "";
+  background-image: url("../../images/block-8_icons/icon_small_question_mark.svg");
+  width: 33px;
+  height: 33px;
+  top: 10px;
+  left: -100px;
+}
+.content-container_left__item_lg {
+  margin-top: 55px;
+}
+.content-container_left__item_lg::before {
+  position: absolute;
+  content: "";
+  background-image: url("../../images/block-8_icons/icon_phone.svg");
+  width: 66px;
+  height: 66px;
+  top: 0px;
+  left: -116px;
 }
 
 .block-btn {
+  position: relative;
   max-width: 200px;
   min-width: 200px;
   max-height: 51px;
@@ -177,19 +198,32 @@ body {
   text-transform: uppercase;
   text-align: left;
   font-size: 18px;
-  font-weight: 400;
 }
 .block-btn_red {
   background-color: #D71635;
   color: #FFFFFF;
 }
+.block-btn_red::after {
+  position: absolute;
+  content: "";
+  background-image: url("../../images/arrows/white_arrow.svg");
+  width: 32px;
+  height: 10px;
+  top: 20.5px;
+  right: 22px;
+}
 .block-btn_white {
   background-color: #FFFFFF;
   color: #D71635;
 }
-.block-btn__arrow_white {
-  display: inline-block;
-  margin-left: 11px;
+.block-btn_white::after {
+  position: absolute;
+  content: "";
+  background-image: url("../../images/arrows/red_arrow.svg");
+  min-width: 32px;
+  height: 10px;
+  top: 20.5px;
+  right: 22px;
 }
 
 .service-form {
