--- a/scss/blocks/_contacts.scss
+++ b/scss/blocks/_contacts.scss
@@ -1,40 +1,69 @@
-.block-contacts {
+.contacts {
+    display: flex;
     max-width: 1920px;
     max-height: 387px;
     margin: 0 auto;
     font-family: $main-font;
 
-    &-content {
+    &_left {
+        min-width: 1022px;
         display: flex;
         flex-direction: column;
+    }
+
+    &_right {
+        min-width: 898px;
+    }
+}
+
+.contacts-inner {
+    display: flex;
+
+    &_left,
+    &_right {
+        display: inherit;
+        flex-direction: column;
+        align-items: flex-start;
+        // justify-content: space-between;
         max-height: 155px;
+        margin-top: 65px;
+        padding: 26px;
         background-color: $bg-color-light;
-
-        &_left {
-            max-width: 397px;
-        }
-
-        &_right {
-            max-width: 285px;
-        }
-
-        &__icon {
-            max-height: 44px;
-        }
-
-        &__text_bold {
-            font-size: 20px;
-            font-weight: 600;
-        }
-
-        &__text_grey {
-            font-size: 14px;
-            color: $ext-color-dark;
-        }
     }
 
-    &-map {
-        max-width: 900px;
-        max-height: 387px;
+    &_left {
+        min-width: 397px;
+        max-width: 397px;
+        margin-left: 245px;
     }
+
+    &_right {
+        max-width: 285px;
+        min-width: 285px;
+        margin-left: 14px;
+    }
+}
+
+.contacts-inner_left {
+    & .content-container__item_bold {
+        font-size: 20px;
+    }
+
+    & .content-container__item {
+        margin-top: 10px;
+        font-size: 14px;
+        color: $text-color-light;
+    }
+}
+
+.contacts-inner_right {
+    & .content-container__item_bold {
+        font-size: 20px;
+    }
+
+    & .content-container__item {
+        margin-top: 10px;
+        font-size: 14px;
+        color: $text-color-light;
+     }
 }
