--- a/scss/blocks/_service.scss
+++ b/scss/blocks/_service.scss
@@ -41,6 +41,10 @@
 }
 
 .header-container {
+    &_contacts {
+        margin-top: 21px;
+        margin-left: 245px;
+    }
 
     &__icon,
     &__title {
@@ -78,6 +82,11 @@
             font-weight: 700;
             color: $text-color-title;
         }
+    }
+
+    &__icon {
+        max-height: 44px;
+        margin-bottom: 21px;
     }
 }
 
@@ -134,8 +143,6 @@
     max-width: 615px;
     margin-top: 213px;
     margin-left: 119px;
-
-    // border: 1px solid blue;
 }
 
 .feedback-form {
