--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -2,7 +2,7 @@
 $text-color-title:#D71635;
 $text-color-main: #000000;
 $text-color-white:#FFFFFF;
-$ext-color-dark: #525252; //dark-grey - logo in header & footer
+$text-color-dark: #525252; //dark-grey - logo in header & footer
 $text-color-light:#878787; //light-grey - email, schedule in header & footer
 
 
