--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -1,28 +1,10 @@
-.container__low {
-    max-width: 1250px;
-    margin: 0 auto;
-    padding: 0 15px;
-
-    @media screen and (max-width: 1310px) {
-        max-width: 1000px;
-    }
-
-    @media screen and (max-width: 1080px) {
-        max-width: 700px;
-    }
-
-    @media screen and (max-width: 700px) {
-        max-width: 500px;
-    }
-}
-
 .footer {
-    position: absolute;
-    color: $text-color-main;
-    height: 300px;
-    width: 100%;
-    bottom: 0;
-    z-index: 4;
+    display: flex;
+    max-width: 1920px;
+    min-height: 320px;
+    margin: 0 auto;
+    font-family: $main-font;
+    font-weight: 400;
     background-color: $bg-color-white;
 
     @media screen and (max-width: 1080px) {
@@ -38,32 +20,23 @@
     }
 }
 
-.footer__inner {
-    display: flex;
-    justify-content: space-between;
-    gap: 65px;
-    margin-top: 75px;
-
-    @media screen and (max-width: 910px) {
-        margin-top: 30px;
-        height: 315px;
-        flex-direction: column;
-        flex-wrap: wrap;
-        justify-content: end;
-
-    }
-
-    @media screen and (max-width: 700px) {
-        flex-wrap: nowrap;
-        align-items: center;
-        margin-bottom: 15px;
-    }
-}
-
-.footer__logo {
+.footer-logo {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    max-height: 115px;
+    margin-top: 91px;
+    margin-bottom: 116px;
+    margin-left: 245px;
+
+    &__image {
+        max-width: 208px;
+        margin-bottom: 20px;
+    }
+
+    &__text {
+        max-width: 245px;
+        color: $text-color-dark;
+    }
 
     @media screen and (max-width: 910px) {
         width: 232px;
@@ -71,57 +44,44 @@
     }
 }
 
-.footer__copy {
-    display: none;
+.footer-menu {
+    display: flex;
+    flex-direction: column;
+    max-width: 202px;
+    margin-top: 75px;
+    margin-left: 250px;
 
-    @media screen and (max-width: 910px) {
-        display: inline-block;
+    &__link {
+        font-size: 18px;
+        line-height: 27px;
+        color: $text-color-main;
     }
-}
-
-.footer__menu {
-    width: 460px;
 
     @media screen and (max-width: 1080px) {
         width: auto;
     }
 }
 
-.footer__menu-list {
+.footer-contacts {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    height: 100px;
-    margin: 0;
-    padding: 0;
+    margin-left: 166px;
 
-    @media screen and (max-width: 1080px) {
-        height: auto;
-        flex-wrap: nowrap;
+    &_top{
+        margin-top: 75px;
     }
-
-    @media screen and (max-width: 700px) {
-        gap: 5px;
+    &_bottom{
+        max-width: 368px;
+        margin-top: 45px;
     }
-}
+    
+    & .content-container__item {
+        // font-size: 20px;
 
-.footer__menu-item {
-    padding-right: 50px;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 30px;
-    letter-spacing: 1.5;
-
-    @media screen and (max-width: 700px) {
-        padding-right: 0;
+        &_bold {
+            font-size: 30px;
+        }
     }
-}
-
-.footer__contacts {
-    font-size: 16px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
 
     @media screen and (max-width: 910px) {
         justify-content: flex-end;
@@ -132,36 +92,4 @@
         align-items: center;
         margin-top: -30px;
     }
-}
-
-.footer__row {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-}
-
-.footer__contacts p {
-    display: block;
-    margin: 0;
-}
-
-.footer__logo p {
-    display: block;
-    margin: 0;
-
-    @media screen and (max-width: 910px) {
-        display: none;
-    }
-}
-
-.footer__phone {
-    font-family: "RF Dewi Extended";
-}
-
-.footer__adress {
-    padding-bottom: 5px;
-}
-
-.footer__email {
-    width: 100px;
 }
