--- a/scss/blocks/_banner.scss
+++ b/scss/blocks/_banner.scss
@@ -3,17 +3,26 @@
     &__container {
         max-width: 1920px;
 
-        // * {
-        //     outline: 1px solid palevioletred;
-        // }
+        font-family: $main-font;
+
+        * {
+            outline: 1px solid palevioletred;
+        }
     }
 
-    &__slider {}
+    &__slider {
+        max-height: 700px;
+        // box-sizing: border-box;
+        position: relative;
+    }
 
     &__wrapper {}
 
     &__slide {
-        min-height: 85vh;
+        display: flex;
+        align-items: center;
+        // max-height: 700px;
+        padding-bottom: 20%;
         background-size: 100%;
         background-repeat: no-repeat;
 
@@ -39,18 +48,43 @@
     }
 
     &__info {
-        width: fit-content;
+        // width: fit-content;
+        max-width: 717px;
         margin-left: 47%;
         padding: 45px;
         border-radius: 4px 0 4px 4px;
         background-color: #FFFFFF58;
     }
 
-    &__title {}
+    &__title {
+        @include font-style (600, $title-font-size, 39px);
+    }
 
-    &__text {}
+    &__text {
+        margin: 20px auto;
+        @include font-style (400, $big-text-font-size, 42px);
+    }
 
-    &__button-more {}
+    &__button-more {
+        @include button-main (234px, 15px, $button-font-size);
+
+        img {
+            display: inline;
+        }
+    }
+
+    &__navigation {
+        position: absolute;
+        z-index: 1;
+        left: 47%;
+        top: 80%;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        max-width: 717px;
+    }
 
     &__pagination {}
 
@@ -77,4 +111,16 @@
         }
     }
 
+}
+
+/* target the active bullet */
+span.swiper-pagination-bullet.swiper-pagination-bullet-active {
+    background-color: blue;
+    opacity: 1;
+}
+
+/* target all bullets */
+.swiper-pagination-bullet {
+    background-color: red;
+    opacity: 1;
 }
