--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@
 
 @import './blocks/banner';
 @import './blocks/products';
+@import './blocks/block_6';
 @import './blocks/service';
 @import './blocks/feedback-form';
 @import './blocks/contacts';
