--- a/scss/blocks/_block_6.scss
+++ b/scss/blocks/_block_6.scss
@@ -1,5 +1,5 @@
 .convinience {
-    max-width: 1920px;
+    max-width: 1430px;
     margin: 0 auto;
     font-family: $main-font;
     font-weight: 400;
@@ -12,7 +12,7 @@
 .card-wrapper {
     display: flex;
     justify-content: space-between;
-    max-width: 1430px;
+    max-width: 100%;
     margin: 66px auto 54px;
 }
 
